# Multi-Segmenter

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  _model_8cpp.html  _model_8cpp.js  _model_8cpp__incl.map  _model_8cpp__incl.md5  _model_8cpp_a06baa8755b3a8d2e4eac97866a651704_icgraph.map  _model_8cpp_a06baa8755b3a8d2e4eac97866a651704_icgraph.md5  _model_8cpp_source.html  _model_8h.html  _model_8h__dep__incl.map  _model_8h__dep__incl.md5  _model_8h__incl.map  _model_8h__incl.md5  _model_8h_source.html  _r_e_a_d_m_e_8md.html  _segmentation_8h.html  _segmentation_8h.js  _segmentation_8h__dep__incl.map  _segmentation_8h__dep__incl.md5  _segmentation_8h__incl.map  _segmentation_8h__incl.md5  _segmentation_8h_source.html  _simple_renderer_2requirements_8txt.html  _subdivider_2requirements_8txt.html  annotated.html  annotated_dup.js  class_c_u_d_a_face_graph-members.html  class_c_u_d_a_face_graph.html  class_c_u_d_a_face_graph.js  class_c_u_d_a_face_graph__coll__graph.map  class_c_u_d_a_face_graph__coll__graph.md5  class_c_u_d_a_face_graph__inherit__graph.map  class_c_u_d_a_face_graph__inherit__graph.md5  class_c_u_d_a_face_graph_a1273ca1b2857cc4543c306f324139902_cgraph.map  class_c_u_d_a_face_graph_a1574084a1f836aac09f75bbf8ac5b151_icgraph.map  (+720 more)
.github/workflows/: build-assets-video-high.yml  build-assets-video-low.yml  build-assets-video-ultra.yml  build-assets-video.yml  build-assets.yml  build-assets2.yml  build-doxygen.yml  build-linux.yml  build-windows.yml  build.yml  cuda-build.yml  deploy-doxygen.yml  doxygen-gh-pages.yml  openmp-build-assets-video-high.yml  openmp-build-assets-video-low.yml  openmp-build-assets-video-ultra.yml  openmp-build-assets.yml  openmp-build.yml  record-performance.yml  record-profile.yml
CUDA/: CMakeLists.txt
CUDA/inc/: color.hpp  cudaheader.h  dstimer.hpp  dtypes.h  face.h  facegraph.hpp  facegraphutils.h  header.h  kernelutil.h  material.h  matrixutil.h  object.h  objloader.h  objutils.h  segmenter.hpp  serialfacegraph.h  texture.hpp  timer.h  triangle.h  trianglemesh.hpp  vectex.h  vector.h
CUDA/src/: cudaimpl.cu  impl.cpp  kernelutil.cpp  main.cpp  matrixutil.cu  model.cpp  objutils.cu
OpenMP/: CMakeLists.txt
OpenMP/inc/: lockutils.hpp  logutils.h  parallelsegmenter.h  serialsegmenter.h  trianglemesh.hpp
OpenMP/src/: parallelsegmenter.cpp  serialsegmenter.cpp
OpenMP/tests/: test.cpp
assets/: Cube_noised.mtl  Dodecahedron.mtl  Icosahedron.mtl  Sphere.mtl  TestCube.mtl
inc/: Model.h  Segmentation.h  color.hpp  consoleutils.h  cudafacegraph.h  cudafacegraphutils.h  cudasegmenter.h  devicetrianglemesh.hpp  dstimer.h  facegraph.h  facegraph.hpp  facegraphutils.h  graphnode.hpp  grouping.h  hashmap.hpp  library.h  logutil.hpp  logutils.h  material.h  model.h  model.hpp  modelutils.hpp  objutils.h  originalsegmenter.h  parallelfacegraph.h  parallelsegmenter.h  parallelsegmentor.h  segmenter.hpp  segmentor.hpp  segmentunion.hpp  serialfacegraph.h  serialsegmenter.h  serialsegmentor.h  texture.hpp  thrustlib.h  triangle.h  trianglemesh.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  defines_2.html  (+98 more)
src/: Model.cpp  cudafacegraph.cpp  cudafacegraph.cu  cudafacegraphutils.cu  cudasegmenter.cpp  cudasegmenter.cu  dstimer.cpp  facegraph.cpp  facegraphutils.cpp  grouping.cu  library.cpp  main.cpp  model.cpp  originalsegmenter.cpp  parallelfacegraph.cpp  parallelsegmenter.cpp  parallelsegmentor.cpp  serialfacegraph.cpp  serialsegmenter.cpp  serialsegmentor.cpp  test.cu  tiny_obj_loader.cpp
tests/: main.cpp  test.cpp  testlib.cpp  testlib.h
utils/Executor/: converter.ps1  executor.ps1  profile.sh  record.sh
utils/LogTool/: converter.js  package.json  parser.js
utils/LogTool/legacy/: index.js
utils/SimpleRenderer/: renderer.py  requirements.txt
utils/Subdivider/: subdivider.py
